Fix (Footer): Align Footer with Navbar

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   align-items: center;
   background: rgba(34, 34, 34, 0.03);
-  padding: 2rem 1rem;
+  padding: 2rem 0.5rem;
   display: flex;
   justify-content: center;
   flex-direction: column;
